# protohub

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows-linux.yml  build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tools/: generate_protohub_icon.py
